2010-03-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* templates/default-login.html: Added "remember me"

	* perllib/Torrus/ApacheHandler.pm: Changed to Torrus::CGI

	* perllib/Torrus/Apache2Handler.pm: Changed to Torrus::CGI.
	Now incompatible with "SetHandler modperl"

	* perllib/Torrus/CGI.pm: New HTTP handler instead of two different
	Apache handlers.

2010-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/flushmonitors.in: new utility

	* bin/compilexml.in: Dynamic tokenset members are preserved between
	compilations

	* perllib/Torrus/ConfigTree.pm (tsetAddMember): Tokenset members
	have now an indicated origin (monitor/static)

	* perllib/Torrus/Monitor.pm: Alarms are now persistent between
	config re-compilations

2010-02-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm:
	New parameter: node-display-name. Now interface names are not
	underscored
	

2010-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/RRDtool.pm (rrd_make_multigraph):
	new multigraph parameters: line-stack-X, line-alpha-X

2010-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	Default snmp-max-msg-size is set to 65535 for SNMP v1 and v2

2010-02-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	new selector action: NotifyPolicy

2010-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/ALU_Timetra.pm:
	new discovery parameter: ALU_Timetra::full-ifdescr

2010-01-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/ALU_Timetra.pm: new discovery module

2010-01-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	snmp-max-msg-size is used now in discivery, not only in collector

2009-10-28  Jon Nistor  <nistor@snickers.org>